vibecrafted-app/tui-agent/tests/snapshots/mission_control_snapshots__mission_control_tab_populated_colors.snap
---
source: tui-agent/tests/mission_control_snapshots.rs
expression: buffer_color_map(&buffer)
---
YYYYYYYYYYYYYYYYYYYYddddddddd..ggggggggggggggggggg......................................................................
dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggYYYYYYYYYYYgggggggggggggggggggggggggggggggggggggggg
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
.GGGGGGGGGGGGGGGGGGG.....................CCCCCCCCCCCCCCC.........................MMMMMMMMMMMMMMMMM......................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
YGGGGGGGGGGGGGGGGGGGGGGGYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY.CCCCCCCCCCCCCCCC...........................................
YYYYYYYYYYYYYYYYYYYYY......................................Y.GG.........................................................
Y..........................................................Y.Y.Y........................................................
Y..........................................................Y.Y.Y........................................................
YYYYYYYYYYYYYYYYYYYYY......................................Y.RR.........................................................
Y..........................................................Y.dd.........................................................
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY............................................................
.YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY.................................BBBBBBBBBBBBBBBBBBBBB................................
.ddddddddddddddddddddddddddddddddddddddddddddd.....................ddddddddddddddddddddddddddddddddd....................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
.MMMMMMMMMMMMMMMMMM.......................RRRRRRRRRRRRRRRRRRRRRRR................WWWWWWWWWWWWWWWWWWWWWWWWWWW............
.YY..................ddddddddddddddddddd..RRRRRRRRRRRRRRRRRRRR...................RRRddddddd.............................
.gg..................ddddddddddddddddddd..dddddddddddddddddddddd.................YYdddddddd.............................
.GG..................ddddddddddddddddddd..RRRRRRRRRRRRRRRRRRRR...................YYddddddddddd..........................
.GG..................dddddddddddddddddd...dddddddddddddddddddddddddddd...........CCddddddddd............................
.GG..................ddddddddddddddddddd................................................................................
........................................................................................................................
........................................................................................................................
.ddddddddddddddd........................................................................................................
.ddddddddddddddd........................................................................................................
.YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY......................................................................................
........................................................................................................................
........................................................................................................................
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
