vibecrafted-app/tui-agent/tests/snapshots/mission_control_snapshots__vc_admin_status.snap
---
source: tui-agent/tests/mission_control_snapshots.rs
expression: stdout
---
Mission Control
control plane: [PATH]
artifact root: [PATH]

== Settlement board (3) ==
settlement  f=0 x=0 n=3 (+invalid=0) · unclassified=0 · active=0 · stalled=0 · orphans=0 · total_settled=3 · scope: retained control_plane/runs snapshots
note: f/x/n reads settlement_verdict on retained snapshots only.

== Active dispatches (0) ==
no live dispatches

== Wave atlas (2) ==
STATE          WAVE                               TOTAL  COMPLETE  FAILED  ACTIVE
in-progress    wave-a                                 2         1       1       0
completed      wave-b                                 1         1       0       0

== Per-agent stats (2) ==
AGENT           RUNS  COMPLETE  FAILED  SUCCESS    MODEL AVG_DUR
claude             2         2       0     100%     100% 1.4m
codex              1         0       1       0%       0% -

== Per-skill stats (2) ==
SKILL                    INV  COMPLETE  FAILED AVG_DUR
implement                  2         2       0 1.4m
marbles                    1         0       1 -

== Fleet health ([N]) ==
STATUS    SIGNAL             DETAIL
✓         control-plane      [PATH] (3 runs)
✓         artifact-root      [PATH]
✓         derived runs       3 derived runs scanned
!         model parity       1/3 missing model
!         duration parity    1/3 missing duration_s
!         disk ~/.vibecra... [DISK]
!         disk ~/.codex      [DISK]
!         disk ~/.aicx       [DISK]
!         disk ~/.vibecra... [DISK]
✓         ulimit -f          [ULIMIT]
✓         mcp loctree-mcp [MCP]
✓         mcp aicx-mcp    [MCP]
!         mcp vibecrafted... [MCP]
✓         mcp loctree-mcp... [MCP]
✗         tailscale host-a   dispatch target offline (100.64.0.10)
✓         tailscale host-b   online (100.64.0.11)
✓         aicx index      [AICX]

== Failure board 24h (1) ==
RUN_ID                       AGENT      SKILL              AGE          REASON
just-002                     codex      marbles            [AGE] ago       failed

== Operator action queue (2) ==
PRIORITY KIND       SUMMARY
!!       failure    investigate just-002 (codex / marbles)
-        report     open report just-001 (claude)
                    source: /fixture/just-001/report.md

== DataQuality ==
artifact root present: yes
artifact root: [PATH]
generated at: [TS]
derived runs scanned: 3
scan capped: no
missing model: 1
missing duration: 1
parse failures: 0
